<resources>
    <string name="app_name">seguimientoNutricional</string>
    <string name="version">1.0</string>
    <!-- Facebook string. -->
    <string name="facebook_app_id">2851192594999297</string>
    <string name="fb_login_protocol_scheme">fb2851192594999297</string>

    <!-- set time notification -->
    <string name="time_notification">Horario del recordatorio</string>

    <!-- Login strings -->
    <string name="or_register">O registrarse</string>
    <string name="or_login">O iniciar sesión</string>
    <string name="login_fail">Error al iniciar sesión</string>
    <string name="wrong_credentials">Cuenta o contraseña incorrecta</string>
    <string name="login_cancelled">Inicio de sesión cancelado</string>
    <string name="register_fail">Error al realizar registro</string>
    <string name="pass_not_matching">Las constraseñas no coinciden</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Registro de Actividades</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_logout">Terminar Sesión</string>

    <string name="home_second">Home Second</string>

    <!-- Profile string -->
    <string name="name">Nombre</string>
    <string name="last_name">Apellido Paterno</string>
    <string name="second_last_name">Apellido Materno</string>
    <string name="correo_electronico">Correo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
